# augment-rm-manifest-linter-suite

./: README.md  setup.cfg
reports/: django-haystack_documentation_open.csv
