[metadata]
name = augment-rm-manifest-linter-suite
version = 0.1.0
description = A manifest linter suite for augment-rm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryan-kovac/augment-rm-manifest-linter-suite
author = Ryan Kovac
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src
